--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
     "@tailwindcss/vite": "^4.0.6",
     "aos": "^2.3.4",
     "framer-motion": "^12.4.3",
